feat: add delete note api
