# backend/swagger.yml
@@ -253,3 +253,58 @@ paths:
           $ref: "#/components/responses/UnprocessableEntity"
         "401":
           $ref: "#/components/responses/UnauthorizedError"
+
+  /note/note-list:
+    get:
+      summary: Lists of Note
+      tags:
+        - Note
+      security:
+        - bearerAuth: []
+
+      parameters:
+        - in: query
+          name: page
+          schema:
+            type: integer
+            example: 1
+        - in: query
+          name: limit
+          schema:
+            type: integer
+            example: 10
+
+      responses:
+        "200":
+          $ref: "#/components/responses/Success"
+        "401":
+          $ref: "#/components/responses/UnauthorizedError"
+        "404":
+          $ref: "#/components/responses/NotFoundError"
+
+  /note/delete-note/{noteId}:
+    delete:
+      summary: Delete Note
+      description: |
+        - Delete Note
+      tags:
+        - Note
+      security:
+        - bearerAuth: []
+
+      parameters:
+        - in: path
+          name: noteId
+          schema:
+            type: string
+            example: 666d589428caabae12712a38
+
+      responses:
+        "200":
+          $ref: "#/components/responses/Success"
+        "409":
+          $ref: "#/components/responses/ConflictError"
+        "422":
+          $ref: "#/components/responses/UnprocessableEntity"
+        "401":
+          $ref: "#/components/responses/UnauthorizedError"
